--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import './styles/variables.css';
 @import './styles/products.css';
 @import './styles/accessories.css';
+@import './styles/gallery.css';
 
 
 body {
