--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -39,8 +39,8 @@ nav {
 }
 .nav-links {
   list-style: none;
-  display: flex !important;
-  gap: 1.1rem;
+  display: flex;
+  gap: 2rem;
   margin: 0;
   padding: 0;
   z-index: 20;
@@ -51,7 +51,7 @@ nav {
 }
 .nav-link {
   text-decoration: none;
-  font-size: 0.97rem;
+  font-size: 1.05rem;
   font-weight: 600;
   padding: 4px 0;
   transition: color 0.2s;
@@ -133,10 +133,10 @@ nav {
   width: max-content;
   background: var(--color-bg);
   border: 1px solid var(--color-border);
-  border-radius: 6px;
+  border-radius: 3px;
   box-shadow: 0 2px 8px var(--color-shadow);
   padding: 0.3rem 0;
-  z-index: 100;
+  z-index: 900;
   list-style: none;
 }
 .dropdown:hover .dropdown-menu {
@@ -145,21 +145,22 @@ nav {
 .dropdown-link {
   display: block;
   color: var(--color-text) !important;
-  padding: 8px 0 8px 18px;
+  padding: 8px 0 8px 12px;
   text-decoration: none;
+  margin-right: 30px;
   font-size: 0.95rem;
   transition: color 0.2s;
   position: relative;
   background: none;
   border: none;
   width: max-content;
-  min-width: 120px;
+  min-width: 140px;
 }
+
 .dropdown-link::after {
   content: '';
   display: block;
   position: absolute;
-  /* left: 0; */
   bottom: 2px;
   width: 0;
   height: 2px;
@@ -167,6 +168,7 @@ nav {
   border-radius: 2px;
   transition: width 0.3s cubic-bezier(0.4,0,0.2,1);
 }
+
 .dropdown-link:hover,
 .dropdown-link:focus {
   color: var(--color-primary) !important;
